--- a/index.html
+++ b/index.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terry個人官網</title>
+    <title>TR Cafe</title>
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-    <h1>Terry個人官網</h1>
+    <div class="wrap">
+        <!-- 社群 -->
+            <ul class="top">
+                <li class="facebook">
+                    <a href="#">
+                        <img src="images/fb.png" alt="images">
+                        <span>粉絲團</span>
+                    </a>
+                </li>
+                <li class="twitter">
+                    <a href="#">
+                        <img src="images/twitter.png" alt="twitter">
+                        <span>追蹤我們</span>
+                    </a>
+                </li>
+            </ul> 
+        <!-- 選單 -->
+        <div class="header">
+            <h1>
+                <a href="#">Hex School</a>
+            </h1>
+            <ul class="menu">
+                <li>首頁</li>
+                <li>課程介紹</li>
+                <li>部落格</li>
+                <li>聯絡我們</li>
+            </ul>
+        </div>
+        <!-- 課程介紹 -->
+        <div class="course">
+            <div class="course-item">
+                <img src="images/feature-html5.png" alt="images">
+                <h2>Html 5 基礎教學</h2>
+                <p>主流前端網站設計的基礎就在六角學院，在這裡不再是填鴨式教學，而是透過實際的範例，瞭解正確的網站開發流程，講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
+            </div>
+            <div class="course-item2">
+                <img src="images/feature-rwd.png" alt="images">
+                <h2>響應式網站設計</h2>
+                <p>響應式網站設計(Responsive web design)，目前大多使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。六角學院將會提供業界響應式開發方法，讓學生瞭解行動版開發技巧。</p>
+            </div>
+            <div class="course-item3">
+                <img src="images/feature-jquery.png" alt="images">
+                <h2>jQuery 實戰教學</h2>
+                <p>本課程有以下特色</p>
+                <ul class="list">
+                    <li>瞭解變數的使用方法</li>
+                    <li>學習並操作 DOM</li>
+                    <li>學習基本數學運算方法</li>
+                    <li>套件的操作及運用</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
